<resources>
    <string name="app_name">Vegetable garden calendar</string>
    <string name="tab_text_1">Calendrier</string>
    <string name="calendar_heading1">Légumes</string>
    <string name="calendar_heading2">January</string>
    <string name="calendar_heading3">February</string>
    <string name="calendar_heading4">March</string>
    <string name="calendar_heading5">April</string>
    <string name="calendar_heading6">May</string>
    <string name="calendar_heading7">June</string>
    <string name="calendar_heading8">July</string>
    <string name="calendar_heading9">August</string>
    <string name="calendar_heading10">September</string>
    <string name="calendar_heading11">October</string>
    <string name="calendar_heading12">November</string>
    <string name="calendar_heading13">December</string>
    <string name="tab_text_2">Parameter</string>
    <string name="loading_msg">Loading please wait ..</string>
    <string name="search">rechercher</string>
    <string name="dialog_msg_add_vegetable_to_my_vegetable_garden1">Do you want add on your custom vegetable garden</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="added_success">" is added to your vegetable garden"</string>
    <string name="already_exist">already exist</string>
    <string name="added_success_all"> added to your vegetable garden</string>
    <string name="already_exist_all">already exist</string>
    <string name="my_vegetable_garden">My vegetable garden</string>
    <string name="indoor_seeding">Indoor seeding</string>
    <string name="outdoor_seeding">Outdoor seeding</string>
    <string name="transplantation">Transplantation</string>
    <string name="harvest">Harvest</string>
    <string name="add_calendar_msg1">"Do you want to add a notification to a start date of: "</string>
    <string name="close">close</string>
    <string name="validate">Validate</string>
    <string name="option_menu">"My preferences "</string>
    <string name="add_contact">Add default email contacts to calendar events</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="not_valid_mail">Mail exist or not valid</string>
    <string name="input_mails_msg">put an email address</string>
    <string name="not_mail_exist">No emails yet</string>
    <string name="start_time_msg">Start time</string>
    <string name="end_time_msg">End time</string>
    <string name="notification_time_msg">Set the notification time</string>
    <string name="saved">saved</string>
    <string name="notified">notified</string>
    <string name="delete_msg">Delete from my vegetable garden</string>
    <string name="calendar_vegetable_garden_name">Planting calendar</string>
    <string name="today_i_can">Today i can : </string>
    <string name="add_to_my_vegetable_garden">Add to my vegetable garden</string>
    <string name="home">Home</string>
    <string name="nothing_to_do_today">Nothing to do today</string>
    <string name="to_do_harvet"><u>To Harvest</u></string>
    <string name="to_do_indoorseeding"><u>Make indoor seeding</u></string>
    <string name="to_do_outdoorseeding"><u>Make outdoor seeding</u></string>
    <string name="to_do_transplantation"><u>Make transplanting</u></string>
    <string name="step1_form_title">In order to determine the best planting schedule for you, define your location: </string>
    <string name="step1_city_header">Entering a city and a country</string>
    <string name="step1_city_input_txt">City</string>
    <string name="step1_country_input_txt">Country</string>
    <string name="step1_geoloc_header">Or directly by retrieving the location data from your device.</string>
    <string name="step1_validate_error">Enter a city and a country</string>
    <string name="step2_header_adresse_found">Here is the address and contact details found</string>
    <string name="step2_launch_loading_koppen_btn_txt">Find the climatic zone associated with your region</string>
    <string name="step3_header_txt">Your region according to the KÖPPEN-GEIGER classification corresponds to the following climate:</string>
    <string name="step3_launch_home_btn_txt">Load the calendar associated with this climate</string>
    <string name="error_no_internet">No internet</string>
</resources>
