<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="">
    <menu>
            <item
                android:id="@+id/app_bar_home"
                android:title="@string/home"
                android:icon="@drawable/ic_pousse_logo_v2"
                app:showAsAction="always" />
            <item
                android:id="@+id/app_bar_my_vegetable_garden"
                android:title="@string/my_vegetable_garden"
                android:icon="@drawable/ic_logo_menu_mygarden"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/app_bar_calendar_vegetable_garden"
                android:title="@string/calendar_vegetable_garden_name"
                android:icon="@drawable/ic_logo_menu_calendar"
                app:showAsAction="always|withText" />
        </menu>
    </item>

</menu>