<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search_and_add"
        android:textColor="@color/table_my_vegetable_garden_color_default_bright2"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/app_bar_home"
                android:title="@string/home"
                android:icon="@drawable/ic_pousse_logo_v2"
                app:showAsAction="always" />
            <item
                android:id="@+id/app_bar_calendar_vegetable_garden"
                android:icon="@drawable/ic_logo_menu_calendar"
                android:title="@string/calendar_vegetable_garden_name"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/app_bar_myparapeters"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/option_menu"
                app:showAsAction="always|withText" />
        </menu>
    </item>
</menu>