<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<color name="table_color_oseeding">#DC044E</color>
    <color name="table_color_iseeding">#03B600</color>
    <color name="table_color_transplantation">#F3A43E</color>
    <color name="table_color_harvest">#FBDA1C</color>-->
    <item
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <shape android:shape="rectangle">
            <size
                android:width="15dp"
                android:height="15dp" />
            <solid android:color="@color/table_color_oseeding" />
        </shape>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/outdoor_seeding" />
    </item>
    <item
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <shape android:shape="rectangle">
            <size
                android:width="15dp"
                android:height="15dp" />
            <solid android:color="@color/table_color_iseeding" />
        </shape>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/indoor_seeding" />
    </item>
    <item
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <shape android:shape="rectangle">
            <size
                android:width="15dp"
                android:height="15dp" />
            <solid android:color="@color/table_color_transplantation" />
        </shape>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transplantation" />
    </item>
    <item
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <shape android:shape="rectangle">
            <size
                android:width="15dp"
                android:height="15dp" />
            <solid android:color="@color/table_color_harvest" />
        </shape>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/harvest" />
    </item>


</android.support.constraint.ConstraintLayout>